--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="stylesheet.css">
 </head>
 <body>
-    <div>head</div>
-    <div></div>
-    <div></div>
-    <div></div>
+    <div class="header">head</div>
+    <div class="chest"></div>
+    <div class="belly"></div>
+    <div class="footer"></div>
 </body>
 </html>
