--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     <div class="header">head</div>
     <div class="chest"></div>
     <div class="belly"></div>
-    <div class="footer"></div>
+    <div class="footer">footer</div>
 </body>
 </html>
