--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <div class="header">head</div>
-    <div class="chest"></div>
-    <div class="belly"></div>
+    <div class="chest">chest</div>
+    <div class="belly">belle</div>
     <div class="footer">footer</div>
 </body>
 </html>
