--- a/index.html
+++ b/index.html
@@ -8,9 +8,69 @@
     <link rel="stylesheet" href="stylesheet.css">
 </head>
 <body>
-    <div class="header">head</div>
-    <div class="chest">chest</div>
-    <div class="belly">belle</div>
-    <div class="footer">footer</div>
+    <div class="header">
+        <div class="menu">
+            <img class="logo" src="https://logodix.com/logo/992747.jpg" alt="Logo Image" width="50px">
+            <div class="menustuff"><a href="https://youtu.be/Tt7bzxurJ1I" target="_blank">VERY COOL VIDEO</a></div>
+            <div class="menustuff"><a href="https://youtu.be/Tt7bzxurJ1I" target="_blank">VERY COOL VIDEO</a></div>
+            <div class="menustuff"><a href="https://youtu.be/Tt7bzxurJ1I" target="_blank">VERY COOL VIDEO</a></div>
+        </div>
+        <div class="headercontents">
+            <div class="headertext">
+                <strong class="headerstrong">header text</strong>
+                <div class="headerinfo">this is website information yes yes tes bop bap bin bopty</div>
+                <button class="signup">Sign Up</button>
+            </div>
+            <img src="https://i.redd.it/5nx6fh50l1w61.png" alt="sheesh">
+        </div>
+
+    </div>
+    <div class="chest">
+        <strong>Some Random information.</strong>
+        <div class="images">
+
+            <div class="imageitems">
+                <img class="chestimages" src="" alt="" height="100px" width="100px">
+                <div class="imagetext">text</div>
+            </div>
+
+            <div class="imageitems">
+                <img class="chestimages" src="" alt="" height="100px" width="100px">
+                <div class="imagetext">text</div>
+            </div>
+
+            <div class="imageitems">
+                <img class="chestimages" src="" alt="" height="100px" width="100px">
+                <div class="imagetext">text</div>
+            </div>
+
+            <div class="imageitems">
+                <img class="chestimages" src="" alt="" height="100px" width="100px">
+                <div class="imagetext">text</div>
+            </div>
+
+        </div>
+    </div>
+    <div class="belly">
+        <div class="quote">
+            <div class="feelsstrongman">You miss 100% of the shots you don't take</div>
+            <div class="quoteguy"><strong>-someone</strong></div>
+        </div>
+    </div>
+    <div class="footer">
+        <div class="footercontainer">
+            <div class="ad">
+                <div>
+                   <strong>stronk</strong>
+                   <div>your ad here</div>
+                </div>
+
+            </div> 
+
+            <button>Sign Up</button>
+        </div>
+        
+    </div>
+    <div class="legalstuff"> Copyright © Odin project 2022</div>
 </body>
 </html>
