--- a/index.html
+++ b/index.html
@@ -30,22 +30,22 @@
         <div class="images">
 
             <div class="imageitems">
-                <img class="chestimages" src="" alt="" height="100px" width="100px">
+                <img class="chestimages" src="" alt="">
                 <div class="imagetext">text</div>
             </div>
 
             <div class="imageitems">
-                <img class="chestimages" src="" alt="" height="100px" width="100px">
+                <img class="chestimages" src="" alt="">
                 <div class="imagetext">text</div>
             </div>
 
             <div class="imageitems">
-                <img class="chestimages" src="" alt="" height="100px" width="100px">
+                <img class="chestimages" src="" alt="">
                 <div class="imagetext">text</div>
             </div>
 
             <div class="imageitems">
-                <img class="chestimages" src="" alt="" height="100px" width="100px">
+                <img class="chestimages" src="" alt="">
                 <div class="imagetext">text</div>
             </div>
 
@@ -67,7 +67,7 @@
 
             </div> 
 
-            <button>Sign Up</button>
+            <button class="signupad">Sign Up</button>
         </div>
         
     </div>
