so funny 😐archive 😐 😐 😐 😐 weirdchampionship 😐

--- a/index.html
+++ b/index.html
@@ -11,66 +11,66 @@
     <div class="header">
         <div class="menu">
             <img class="logo" src="https://logodix.com/logo/992747.jpg" alt="Logo Image" width="50px">
-            <div class="menustuff"><a href="https://youtu.be/Tt7bzxurJ1I" target="_blank">VERY COOL VIDEO</a></div>
-            <div class="menustuff"><a href="https://youtu.be/Tt7bzxurJ1I" target="_blank">VERY COOL VIDEO</a></div>
-            <div class="menustuff"><a href="https://youtu.be/Tt7bzxurJ1I" target="_blank">VERY COOL VIDEO</a></div>
+            <div class="menustuff"><a href="https://youtu.be/Tt7bzxurJ1I" target="_blank">Shop</a></div>
+            <div class="menustuff"><a href="https://youtu.be/Tt7bzxurJ1I" target="_blank">Dog Cam</a></div>
+            <div class="menustuff"><a href="https://youtu.be/Tt7bzxurJ1I" target="_blank">Cat Cam</a></div>
         </div>
         <div class="headercontents">
             <div class="headertext">
-                <strong class="headerstrong">header text</strong>
-                <div class="headerinfo">this is website information yes yes tes bop bap bin bopty</div>
-                <button class="signup">Sign Up</button>
+                <strong class="headerstrong">Juicer Foods 😂 <img src="https://cdn.betterttv.net/emote/5f7e07e397f70a4a9be839f1/3x" alt="JuiceGif" width="50px" height="50px"></strong>
+                <div class="headerinfo">We sell cool epic good food hand crafted by the finest artisans so buy one today or else we can't pay them WeirdChamp 😐 </div>
+                <a href="https://youtu.be/Tt7bzxurJ1I" target="_blank"><button class="signup">Sign Up</button></a>
             </div>
             <img src="https://i.redd.it/5nx6fh50l1w61.png" alt="sheesh">
         </div>
 
     </div>
     <div class="chest">
-        <strong>Some Random information.</strong>
+        <strong>Here are some of what we have to offer</strong>
         <div class="images">
 
             <div class="imageitems">
-                <img class="chestimages" src="" alt="">
-                <div class="imagetext">text</div>
+                <img class="chestimages" src="https://tinyurl.com/BEEEAAANNNZZ" alt="image of beans">
+                <div class="imagetext">BEEEAAANNNZ WTF</div>
             </div>
 
             <div class="imageitems">
-                <img class="chestimages" src="" alt="">
-                <div class="imagetext">text</div>
+                <img class="chestimages" src="https://tinyurl.com/HOENEEYYY" alt="Image of a honey">
+                <div class="imagetext">You may got that but I got the HONNEEEY</div>
             </div>
 
             <div class="imageitems">
-                <img class="chestimages" src="" alt="">
-                <div class="imagetext">text</div>
+                <img class="chestimages" src="https://tinyurl.com/SUAGGGER" alt="image of a sugar">
+                <div class="imagetext">SUGGAARR</div>
             </div>
 
             <div class="imageitems">
-                <img class="chestimages" src="" alt="">
-                <div class="imagetext">text</div>
+                <img class="chestimages" src="https://tinyurl.com/CROISSAAANNTT" alt="Image of a croissant">
+                <div class="imagetext">CROISSAAAANNNT</div>
             </div>
 
         </div>
     </div>
     <div class="belly">
         <div class="quote">
-            <div class="feelsstrongman">You miss 100% of the shots you don't take</div>
+            <div class="feelsstrongman">I ordered on of there poop on a stick and it was truely life changing 10/10 would buy a agane</div>
             <div class="quoteguy"><strong>-someone</strong></div>
         </div>
     </div>
     <div class="footer">
         <div class="footercontainer">
             <div class="ad">
-                <div>
-                   <strong>stronk</strong>
-                   <div>your ad here</div>
+                <div class="adcontents">
+                   <strong>Click the button WeirdChamp 😐</strong>
+                   <div class="reasonsignup">Sign up today! to be the first to get notified when we restock AGANE</div>
                 </div>
 
             </div> 
 
-            <button class="signupad">Sign Up</button>
+            <a href="https://youtu.be/Tt7bzxurJ1I" target="_blank"><button class="signupad">Sign Up</button></a>
         </div>
         
     </div>
-    <div class="legalstuff"> Copyright © Odin project 2022</div>
+    <div class="legalstuff"> Copyright © BEEAAANNNNZZ LIMTED 2022</div>
 </body>
 </html>
